include/El/lapack_like/spectral.py


# Hermitian eigensolvers
# ======================
lib.ElHermitianEig_s.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEig_s.restype = c_uint
lib.ElHermitianEig_d.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEig_d.restype = c_uint
lib.ElHermitianEig_c.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEig_c.restype = c_uint
lib.ElHermitianEig_z.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEig_z.restype = c_uint
lib.ElHermitianEigDist_s.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigDist_s.restype = c_uint
lib.ElHermitianEigDist_d.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigDist_d.restype = c_uint
lib.ElHermitianEigDist_c.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigDist_c.restype = c_uint
lib.ElHermitianEigDist_z.argtypes = [c_uint,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigDist_z.restype = c_uint
lib.ElHermitianEigPair_s.argtypes = [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPair_s.restype = c_uint
lib.ElHermitianEigPair_d.argtypes = [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPair_d.restype = c_uint
lib.ElHermitianEigPair_c.argtypes = [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPair_c.restype = c_uint
lib.ElHermitianEigPair_z.argtypes = [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPair_z.restype = c_uint
lib.ElHermitianEigPairDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPairDist_s.restype = c_uint
lib.ElHermitianEigPairDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPairDist_d.restype = c_uint
lib.ElHermitianEigPairDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPairDist_c.restype = c_uint
lib.ElHermitianEigPairDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianEigPairDist_z.restype = c_uint

lib.ElHermitianEigPartial_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPartial_s.restype = c_uint
lib.ElHermitianEigPartial_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPartial_d.restype = c_uint
lib.ElHermitianEigPartial_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPartial_c.restype = c_uint
lib.ElHermitianEigPartial_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPartial_z.restype = c_uint
lib.ElHermitianEigPartialDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPartialDist_s.restype = c_uint
lib.ElHermitianEigPartialDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPartialDist_d.restype = c_uint
lib.ElHermitianEigPartialDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPartialDist_c.restype = c_uint
lib.ElHermitianEigPartialDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPartialDist_z.restype = c_uint
lib.ElHermitianEigPairPartial_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPairPartial_s.restype = c_uint
lib.ElHermitianEigPairPartial_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPairPartial_d.restype = c_uint
lib.ElHermitianEigPairPartial_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPairPartial_c.restype = c_uint
lib.ElHermitianEigPairPartial_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPairPartial_z.restype = c_uint
lib.ElHermitianEigPairPartialDist_s.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPairPartialDist_s.restype = c_uint
lib.ElHermitianEigPairPartialDist_d.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPairPartialDist_d.restype = c_uint
lib.ElHermitianEigPairPartialDist_c.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianEigPairPartialDist_c.restype = c_uint
lib.ElHermitianEigPairPartialDist_z.argtypes = \
  [c_uint,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianEigPairPartialDist_z.restype = c_uint
def HermitianEig(uplo,A,vectors=False,sort=ASCENDING,subset=None):
  if type(A) is Matrix:
    w = Matrix(A.tag)
    if vectors:
      X = Matrix(Base(A.tag))
      if subset == None:
        if   A.tag == sTag: 
          lib.ElHermitianEigPair_s(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == dTag:
          lib.ElHermitianEigPair_d(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == cTag:
          lib.ElHermitianEigPair_c(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == zTag:
          lib.ElHermitianEigPair_z(uplo,A.obj,w.obj,X.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   A.tag == sTag: 
          lib.ElHermitianEigPairPartial_s(uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == dTag:
          lib.ElHermitianEigPairPartial_d(uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == cTag:
          lib.ElHermitianEigPairPartial_c(uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == zTag:
          lib.ElHermitianEigPairPartial_z(uplo,A.obj,w.obj,X.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w, X
    else:
      if subset == None:
        if   A.tag == sTag: lib.ElHermitianEigPair_s(uplo,A.obj,w.obj,sort)
        elif A.tag == dTag: lib.ElHermitianEigPair_d(uplo,A.obj,w.obj,sort)
        elif A.tag == cTag: lib.ElHermitianEigPair_c(uplo,A.obj,w.obj,sort)
        elif A.tag == zTag: lib.ElHermitianEigPair_z(uplo,A.obj,w.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   A.tag == sTag: 
          lib.ElHermitianEigPairPartial_s(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == dTag:
          lib.ElHermitianEigPairPartial_d(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == cTag:
          lib.ElHermitianEigPairPartial_c(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == zTag:
          lib.ElHermitianEigPairPartial_z(uplo,A.obj,w.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w
  elif type(A) is DistMatrix:
    w = DistMatrix(Base(A.tag),STAR,STAR,A.Grid())
    if vectors:
      X = DistMatrix(A.tag,MC,MR,dSub.Grid())
      if subset == None:
        if   A.tag == sTag: 
          lib.ElHermitianEigPairDist_s(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == dTag:
          lib.ElHermitianEigPairDist_d(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == cTag:
          lib.ElHermitianEigPairDist_c(uplo,A.obj,w.obj,X.obj,sort)
        elif A.tag == zTag:
          lib.ElHermitianEigPairDist_z(uplo,A.obj,w.obj,X.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   A.tag == sTag: 
          lib.ElHermitianEigPairPartialDist_s \
          (uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == dTag:
          lib.ElHermitianEigPairPartialDist_d \
          (uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == cTag:
          lib.ElHermitianEigPairPartialDist_c \
          (uplo,A.obj,w.obj,X.obj,sort,subset)
        elif A.tag == zTag:
          lib.ElHermitianEigPairPartialDist_z \
          (uplo,A.obj,w.obj,X.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w, X
    else:
      if subset == None:
        if   A.tag == sTag: lib.ElHermitianEigPairDist_s(uplo,A.obj,w.obj,sort)
        elif A.tag == dTag: lib.ElHermitianEigPairDist_d(uplo,A.obj,w.obj,sort)
        elif A.tag == cTag: lib.ElHermitianEigPairDist_c(uplo,A.obj,w.obj,sort)
        elif A.tag == zTag: lib.ElHermitianEigPairDist_z(uplo,A.obj,w.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   A.tag == sTag: 
          lib.ElHermitianEigPairPartialDist_s(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == dTag:
          lib.ElHermitianEigPairPartialDist_d(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == cTag:
          lib.ElHermitianEigPairPartialDist_c(uplo,A.obj,w.obj,sort,subset)
        elif A.tag == zTag:
          lib.ElHermitianEigPairPartialDist_z(uplo,A.obj,w.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w
  else: raise Exception('Unsupported matrix type')
